packages/kotlin/ttrp-frontend/src/test/resources/expr/negative/fn-002.expr
sum(amount, region)
# expect: TTRP-FN-002
